<resources>
    <string name="app_name">iCons 724D v2</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="employee_login">Employee Login</string>
    <string name="Number">0</string>
    <string name="studentLogin">Student Login</string>
    <string name="aboutIcons">About the iCons</string>
    <string name="enterName">Enter Name</string>
    <string name="studentNum">Enter Student Number</string>
    <string name="password">Enter Password</string>
    <string name="employeeUser">Enter Login Email</string>
    <string name="stock">Stock Levels</string>
    <string name="rentals">Current Rentals</string>
    <string name="requests">Rental Requests</string>
    <string name="equipment">Equipment List</string>
    <string name="iConsMeet">Meet the iCons</string>
    <string name="info">General Information</string>
    <string name="home">Return to Home</string>
    <string name="confirmOrder">         Confirm your Order         </string>
    <string name="submitRequest">Submit Request</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_after_order">afterOrder</string>

    <string name="description1">The iCons operate after ILC administration hours to keep the facility open to students, loan out equipment and promote a positive studying atmosphere. Feedback is always welcomed and encouraged.</string>
    <string name="description2"> From phone and laptop chargers to textbooks, the iCons have everything you need to get your work done. Struggling with a problem? Come talk to an iCon and see if they can help. Even if its not school related, we’re always happy to talk! </string>


    <string-array name="Rooms">
        <item>Select Room Number</item>
        <item>Stirling Hall</item>
        <item>ILC - 104</item>
        <item>ILC - 105</item>
        <item>ILC - 111</item>
        <item>ILC - 112</item>
        <item>ILC - 113</item>
        <item>ILC - 116</item>.
        <item>ILC - 117</item>
        <item>ILC - 118</item>
        <item>ILC - 119</item>
        <item>ILC - 120</item>
        <item>ILC - 128</item>
        <item>ILC - 129</item>
        <item>ILC - 130</item>
        <item>ILC - 131</item>
        <item>ILC - 218</item>
        <item>ILC - 219</item>
        <item>ILC - 220</item>
        <item>ILC - 221</item>
        <item>ILC - 222</item>
        <item>ILC - 223</item>
        <item>ILC - 224</item>
        <item>ILC - 225</item>
        <item>ILC - 227</item>
        <item>ILC - 228</item>
        <item>ILC - 229</item>
        <item>ILC - 230</item>
        <item>ILC - 231</item>
        <item>ILC - 317</item>
        <item>ILC - 318</item>
        <item>ILC - 319</item>
        <item>ILC - 320</item>
        <item>ILC - 321</item>
        <item>ILC - 322</item>
        <item>ILC - 323</item>
        <item>ILC - 324</item>
        <item>ILC - 325</item>
        <item>ILC - 327</item>
        <item>ILC - 329</item>
        <item>ILC - 330</item>
        <item>ILC - 331</item>

    </string-array>

</resources>


