<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnEmployeeLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="employeeLogin"
        android:text="@string/employee_login"
        app:backgroundTint="#0B426B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStudentLogin"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/btnStudentLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:onClick="studentLogin"
        android:text="@string/studentLogin"
        app:backgroundTint="#0B426B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAboutICons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="aboutIcons"
        android:text="@string/aboutIcons"
        app:backgroundTint="#0B426B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEmployeeLogin"
        app:layout_constraintVertical_bias="0.867" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="279dp"
        android:layout_height="343dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="96dp"
        android:src="@drawable/equiprentals"
        app:layout_constraintBottom_toTopOf="@+id/btnStudentLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>